--- a/moji_radovi.html
+++ b/moji_radovi.html
@@ -37,18 +37,18 @@
 			<!-- ************** Galerija / početak ************** -->
 			<div class="row galerija">
 				<div class="col-12">
-					<h3 style="text-align:center;padding:20px 80px;">PHOTOS</h3>
+					<h3 style="text-align:center;padding:20px 80px;">DESIGN AND ILLUSTRATION</h3>
 				</div>
 
 				<!-- ************** Prva slika / početak ************** -->
 				<div class="col-12 col-md-6 slika">
-		 <div class="maska">
-			 <p>
-				 <a href="slike/slika7_velika.jpg" data-lightbox="galerija" class="naziv-rada">Insignitus</a>
-			 </p>
-		 </div>
-		 <img src="slike/slika7_mala.jpg" class="img-fluid">
-	 </div>
+					<div class="maska">
+						<p>
+							<a href="slike/slika6_velika.jpg" data-lightbox="galerija" class="naziv-rada">Info poster National Park Plitvice Lakes</a>
+						</p>
+					</div>
+					<img src="slike/slika6_mala.jpg" class="img-fluid">
+				</div>
 
 		<!-- ************** Prva slika / kraj ************** -->
 
@@ -76,14 +76,14 @@
 
 
 		<!-- ************** Četvrta slika / početak ************** -->
-		 <div class="col-12 col-md-6 slika">
-		 <div class="maska">
-			 <p>
-				 <a href="slike/slika1_velika.jpg" data-lightbox="galerija" class="naziv-rada">Juice Natura</a>
-			 </p>
-		 </div>
-		 <img src="slike/slika1_mala.jpg" class="img-fluid">
-	 </div>
+			<div class="col-12 col-md-6 slika">
+			<div class="maska">
+				<p>
+					<a href="slike/slika3_velika.jpg" data-lightbox="galerija" class="naziv-rada">Mural</a>
+				</p>
+			</div>
+			<img src="slike/slika3_mala.jpg" class="img-fluid">
+			</div>
 
 				<!-- ************** Četvrta slika / kraj ************** -->
 			</div>
@@ -114,19 +114,23 @@
 			</div>
 			<!-- ************** Galerija / kraj ************** -->
 
+			<div class="bgimg-5">
+				<div class="caption4">
+				<span class="border">CURENT WORK</span>
+				</div>
+			</div>
 
 			<!-- ************** Članci / početak ************** -->
 
 			<div class="row clanci">
-				<div class="col-12">
-					<h3 style="text-align:center;padding:20px 80px;">Curent work</h3>
-				</div>
+
 					<div class="row clanak">
 						<div class="col-md-5">
 							<img src="slike/eco2.jpg" class="img-fluid">
 						</div>
 						<div class="col-md-7">
-							<h4>Adventures of Eco</h4>
+							<h3>Adventures of Eco</h3>
+							<br>
 							<p>Adventures of ECO is an educational 2D platformer game, raising youth awareness of recycling, ecology, sustainable economy and waste management. It will be Koprivnicas first  computer game about sustainable waste management. It is an adventure especially for me since this is my first job animating and illustrating a computer game. Game has four different worlds where you discover four most problematic topics about pollution. Game was first time presented on Info gamer in Zagreb last year and should be finished by the end of 2019.</p>
 						</div>
 					</div>
@@ -135,7 +139,8 @@
 							<img src="slike/eye2.jpg" class="img-fluid">
 						</div>
 						<div class="col-md-7">
-							<h4>Eye contact</h4>
+							<h3>Eye contact</h3>
+							<br>
 							<p>Eye contact is a project as part of a photography course at the final year of the graduate study. It is about photographic recording of avoidance of eye contact in the form of reflection photography and recording of short-term thoughts during avoidance.</p>
 
 						</div>
@@ -145,7 +150,8 @@
 							<img src="slike/saf2.jpg" class="img-fluid">
 						</div>
 						<div class="col-md-7">
-							<h4>Street art festival</h4>
+							<h3>Street art festival</h3>
+							<br>
 							<p>The Street Art Festival emphasizes the process of creation, artistic and experimental expression of artistic expression that will make Koprivnica a place of spontaneous collaboration, public spaces with artistic interventions and interactions with citizens, and art is an integral part of everyday life - on the street.</p>
 							<p>Each year, guest artists will coordinate their practices with the pace of our city for seven days in order to bring more colors in. This year it will be the 7. edition of the festival.</p>
 						</div>
@@ -154,6 +160,11 @@
 
 			<!-- ************** Članci / kraj ************** -->
 
+			<div class="bgimg-3">
+			  <div class="caption3">
+			  <a class="border" href="kontakt.html">CONTACT!</a>
+			  </div>
+			</div>
 
 
 			<!-- ************** Footer / početak ************** -->
