--- a/moji_radovi.html
+++ b/moji_radovi.html
@@ -76,17 +76,15 @@
 
 
 		<!-- ************** Četvrta slika / početak ************** -->
-			<div class="col-12 col-md-6 slika">
+		<div class="col-12 col-md-6 slika">
 			<div class="maska">
 				<p>
 					<a href="slike/slika3_velika.jpg" data-lightbox="galerija" class="naziv-rada">Mural</a>
 				</p>
 			</div>
 			<img src="slike/slika3_mala.jpg" class="img-fluid">
-			</div>
-
-				<!-- ************** Četvrta slika / kraj ************** -->
-			</div>
+		</div>
+ </div>
 			<!-- ************** Galerija / kraj ************** -->
 
 			<!-- ************** Galerija / početak ************** -->
@@ -97,23 +95,25 @@
 				<div class="row">
 					<!-- ************** Prvi video / početak ************** -->
 					<div class="col-12 col-md-6">
-					<iframe src="https://player.vimeo.com/video/191952949" width="100%"  webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+						<div width="100%" controls>
+					<iframe src="https://player.vimeo.com/video/191952949" width="600" height="320" frameborder="0"  webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+				</div>
 					</div>
 					<!-- ************** Prvi video / kraj ************** -->
 
 					<!-- ************** Drugi video / početak ************** -->
 					<div class="col-12 col-md-6">
+						<div width="100%" controls>
 
 
-							<iframe src="https://player.vimeo.com/video/312368799" width="100%" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+							<iframe src="https://player.vimeo.com/video/312368799" width="600" height="320" frameborder="0"  webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
-
+						</div>
 					</div>
 					<!-- ************** Drugi video / kraj ************** -->
 				</div>
 			</div>
 			<!-- ************** Galerija / kraj ************** -->
-
 			<div class="bgimg-5">
 				<div class="caption4">
 				<span class="border">CURENT WORK</span>
@@ -165,7 +165,6 @@
 			  <a class="border" href="kontakt.html">CONTACT!</a>
 			  </div>
 			</div>
-
 
 			<!-- ************** Footer / početak ************** -->
 			<div style="position:relative;">
