--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
              <a href="slike/slika1_velika.jpg" data-lightbox="galerija" class="naziv-rada">Juice Natura</a>
            </p>
          </div>
-         <img src="slike/slika1_mala.jpg" class="img-fluid">
+         <img src="slike/slika1_velika.jpg" class="img-fluid">
        </div>
 
 
@@ -118,7 +118,7 @@
              <a href="slike/slika7_velika.jpg" data-lightbox="galerija" class="naziv-rada">Insignitus</a>
            </p>
          </div>
-         <img src="slike/slika7_mala.jpg" class="img-fluid">
+         <img src="slike/slika7_velika.jpg" class="img-fluid">
        </div>
     </div>
        <!-- ************** animacija / kraj ************** -->
@@ -134,7 +134,7 @@
              <a href="slike/slika2_velika.jpg" data-lightbox="galerija" class="naziv-rada">30 Minuts</a>
            </p>
          </div>
-         <img src="slike/slika2_mala.jpg" class="img-fluid">
+         <img src="slike/slika2_velika.jpg" class="img-fluid">
        </div>
 
 
@@ -144,7 +144,7 @@
              <a href="slike/slika3_velika.jpg" data-lightbox="galerija" class="naziv-rada">Mural</a>
            </p>
          </div>
-         <img src="slike/slika3_mala.jpg" class="img-fluid">
+         <img src="slike/slika3_velika.jpg" class="img-fluid">
        </div>
     </div>
        <!-- ************** ilustracija / kraj ************** -->
@@ -160,7 +160,7 @@
              <a href="slike/slika6_velika.jpg" data-lightbox="galerija" class="naziv-rada">Info poster National Park Plitvice Lakes</a>
            </p>
          </div>
-         <img src="slike/slika6_mala.jpg" class="img-fluid">
+         <img src="slike/slika6_velika.jpg" class="img-fluid">
        </div>
 
 
@@ -170,7 +170,7 @@
              <a href="slike/slika4_velika.jpg" data-lightbox="galerija" class="naziv-rada">Poster for the council of KoHOM</a>
            </p>
          </div>
-         <img src="slike/slika4_mala.jpg" class="img-fluid">
+         <img src="slike/slika4_velika.jpg" class="img-fluid">
        </div>
        <!-- ************** dizajn / kraj ************** -->
      </div>
