--- a/o_meni.html
+++ b/o_meni.html
@@ -48,7 +48,7 @@
 						<img src="slike/o_meni.jpg" class="img-fluid">
 					</div>
 					<div class="col-md-6">
-						<p>I'm a student at university North based in Koprivnica, Croatia. Finishing the final year of graduate study of Media design. Working on multiple art areas including: illustration, animation, photography and design. Skilled in organization, as I'am one of two organizer of ˝Street art Festival˝ and member of creative platform organization based in Koprivnica ˝Mamuze˝. Currently working in the Codebox company, animating and illustrating a video game "Adventurs of Eco". </p>
+						<p style="width: 70%;">I'm a student at university North based in Koprivnica, Croatia. Finishing the final year of graduate study of Media design. Working on multiple art areas including: illustration, animation, photography and design. Skilled in organization, as I'am one of two organizer of ˝Street art Festival˝ and member of creative platform organization based in Koprivnica ˝Mamuze˝. Currently working in the Codebox company, animating and illustrating a video game "Adventurs of Eco". </p>
 					</div>
 				</div>
 			</div>
