--- a/moji_radovi.html
+++ b/moji_radovi.html
@@ -47,7 +47,7 @@
 							<a href="slike/slika6_velika.jpg" data-lightbox="galerija" class="naziv-rada">Info poster National Park Plitvice Lakes</a>
 						</p>
 					</div>
-					<img src="slike/slika6_mala.jpg" class="img-fluid">
+					<img src="slike/slika6_velika.jpg" class="img-fluid">
 				</div>
 
 		<!-- ************** Prva slika / kraj ************** -->
@@ -59,7 +59,7 @@
 				 <a href="slike/slika2_velika.jpg" data-lightbox="galerija" class="naziv-rada">30 Minuts</a>
 			 </p>
 		 </div>
-		 <img src="slike/slika2_mala.jpg" class="img-fluid">
+		 <img src="slike/slika2_velika.jpg" class="img-fluid">
 	 </div>
 		<!-- ************** Druga slika / kraj ************** -->
 
@@ -70,7 +70,7 @@
 				 <a href="slike/slika4_velika.jpg" data-lightbox="galerija" class="naziv-rada">Poster for the council of KoHOM</a>
 			 </p>
 		 </div>
-		 <img src="slike/slika4_mala.jpg" class="img-fluid">
+		 <img src="slike/slika4_velika.jpg" class="img-fluid">
 	 </div>
 		<!-- ************** Treća slika / kraj ************** -->
 
@@ -82,7 +82,7 @@
 					<a href="slike/slika3_velika.jpg" data-lightbox="galerija" class="naziv-rada">Mural</a>
 				</p>
 			</div>
-			<img src="slike/slika3_mala.jpg" class="img-fluid">
+			<img src="slike/slika3_velika.jpg" class="img-fluid">
 		</div>
  </div>
 			<!-- ************** Galerija / kraj ************** -->
@@ -131,7 +131,7 @@
 						<div class="col-md-7">
 							<h3>Adventures of Eco</h3>
 							<br>
-							<p>Adventures of ECO is an educational 2D platformer game, raising youth awareness of recycling, ecology, sustainable economy and waste management. It will be Koprivnicas first  computer game about sustainable waste management. It is an adventure especially for me since this is my first job animating and illustrating a computer game. Game has four different worlds where you discover four most problematic topics about pollution. Game was first time presented on Info gamer in Zagreb last year and should be finished by the end of 2019.</p>
+							<p style="width: 70%;">Adventures of ECO is an educational 2D platformer game, raising youth awareness of recycling, ecology, sustainable economy and waste management. It will be Koprivnicas first  computer game about sustainable waste management. It is an adventure especially for me since this is my first job animating and illustrating a computer game. Game has four different worlds where you discover four most problematic topics about pollution. Game was first time presented on Info gamer in Zagreb last year and should be finished by the end of 2019.</p>
 						</div>
 					</div>
 					<div class="row clanak mt-60">
@@ -141,7 +141,7 @@
 						<div class="col-md-7">
 							<h3>Eye contact</h3>
 							<br>
-							<p>Eye contact is a project as part of a photography course at the final year of the graduate study. It is about photographic recording of avoidance of eye contact in the form of reflection photography and recording of short-term thoughts during avoidance.</p>
+							<p style="width: 70%;">Eye contact is a project as part of a photography course at the final year of the graduate study. It is about photographic recording of avoidance of eye contact in the form of reflection photography and recording of short-term thoughts during avoidance.</p>
 
 						</div>
 					</div>
@@ -152,8 +152,8 @@
 						<div class="col-md-7">
 							<h3>Street art festival</h3>
 							<br>
-							<p>The Street Art Festival emphasizes the process of creation, artistic and experimental expression of artistic expression that will make Koprivnica a place of spontaneous collaboration, public spaces with artistic interventions and interactions with citizens, and art is an integral part of everyday life - on the street.</p>
-							<p>Each year, guest artists will coordinate their practices with the pace of our city for seven days in order to bring more colors in. This year it will be the 7. edition of the festival.</p>
+							<p style="width: 70%;">The Street Art Festival emphasizes the process of creation, artistic and experimental expression of artistic expression that will make Koprivnica a place of spontaneous collaboration, public spaces with artistic interventions and interactions with citizens, and art is an integral part of everyday life - on the street.</p>
+							<p style="width: 70%;">Each year, guest artists will coordinate their practices with the pace of our city for seven days in order to bring more colors in. This year it will be the 7. edition of the festival.</p>
 						</div>
 					</div>
 				</div>
