--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
        <div class="col-12 col-md-6 slika">
          <div class="maska">
            <p>
-             <a href="slike/slika2_velika.jpg" data-lightbox="galerija" class="naziv-rada">30 Minuts</a>
+             <a href="slike/slika2_velika.jpg" data-lightbox="galerija" class="naziv-rada">30 Minutes</a>
            </p>
          </div>
          <img src="slike/slika2_velika.jpg" class="img-fluid">
