--- a/moji_radovi.html
+++ b/moji_radovi.html
@@ -116,7 +116,7 @@
 			<!-- ************** Galerija / kraj ************** -->
 			<div class="bgimg-5">
 				<div class="caption4">
-				<span class="border">CURENT WORK</span>
+				<span class="border">CURRENTLY WORKING ON...</span>
 				</div>
 			</div>
 
