--- a/moji_radovi.html
+++ b/moji_radovi.html
@@ -92,26 +92,12 @@
 				<div class="col-12">
 					<h3 style="text-align:center;padding:20px 80px;">animation</h3>
 				</div>
-				<div class="row">
-					<!-- ************** Prvi video / početak ************** -->
-					<div class="col-12 col-md-6">
-						<div width="100%" controls>
-					<iframe src="https://player.vimeo.com/video/191952949" width="600" height="320" frameborder="0"  webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-				</div>
-					</div>
-					<!-- ************** Prvi video / kraj ************** -->
-
-					<!-- ************** Drugi video / početak ************** -->
-					<div class="col-12 col-md-6">
-						<div width="100%" controls>
-
-
-							<iframe src="https://player.vimeo.com/video/312368799" width="600" height="320" frameborder="0"  webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-
-						</div>
-					</div>
-					<!-- ************** Drugi video / kraj ************** -->
-				</div>
+				<div class="col-6">
+					<iframe src="https://player.vimeo.com/video/191952949" width="100%" height="320" frameborder="0"  webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+				</div>				
+				<div class="col-6">
+					<iframe src="https://player.vimeo.com/video/312368799" width="100%" height="320" frameborder="0"  webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+				</div>				
 			</div>
 			<!-- ************** Galerija / kraj ************** -->
 			<div class="bgimg-5">
@@ -186,3 +172,4 @@
 		</script>
 	</body>
 </html>
+
